--- a/servers/mfs/Makefile
+++ b/servers/mfs/Makefile
@@ -1,6 +1,6 @@
 # Makefile for Minix File System (MFS)
 PROG=	mfs
-SRCS=	cache.c device.c defrag.c link.c \
+SRCS=	cache.c device.c defrag.c fragments.c link.c \
 	mount.c misc.c open.c protect.c read.c \
 	stadir.c stats.c table.c time.c utility.c \
 	write.c inode.c main.c nfrags.c path.c super.c
